<resources>
    <string name="app_name">KazTransGas</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_subtitle">Войдите или зарегистрируйтесь чтобы продолжить</string>
    <string name="registrate">Регистрация</string>
    <string name="login_app">Войти в приложение</string>
    <string name="registration_subtitle">Пожалуйста, заполните поле верно.</string>
    <string name="number_of_account_number">Номер лицевого счета</string>
    <string name="continue_">Продолжить</string>
    <string name="registration_user">Регистрация пользователя</string>
    <string name="profile">profile</string>
    <string name="settings">settings</string>
    <string name="choose_account">Выберите  счет</string>
    <string name="add_account">Добавить лицевой счет</string>
    <string name="registration_info_subtitle">Проверьте данные чтобы продолжить</string>
    <string name="account_number_title">Номер лиц. счета</string>
    <string name="name_title">Ф.И.О</string>
    <string name="city_title">Город</string>
    <string name="adress_title">Адрес</string>
    <string name="enter_phone_number">Введите номер телефона чтобы зарегистрироваться</string>
    <string name="get_code">Получить код</string>
    <string name="incorrect_code">Неверный код</string>
    <string name="send_again">Отправить повторно через:</string>
    <string name="send_again_code">Отправить повторно</string>
    <string name="enter">Войти</string>
    <string name="enter_login_pass">Введите логин и пароль для входа</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="number_of_phone_or_email">Номер телефона или эл.почта</string>
    <string name="password">Пароль</string>
    <string name="enter_code">Введите код</string>
    <string name="we_send_to_you_code">Мы вам отправили SMS с кодом. Введите его.</string>
    <string name="pokazazteli">Показатели</string>
    <string name="user">Собственник</string>
    <string name="address">Адрес:</string>
    <string name="gas_title">Газ, Счетчик</string>
    <string name="enter_current_number">"Введите текущий показателей "</string>
    <string name="scan">Сканировать счетчик</string>
</resources>