<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ktg_logo_welcome"
            android:layout_marginHorizontal="40dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:text="@string/welcome"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="24sp"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black_3d"
            android:textFontWeight="600"/>
        <TextView
            android:id="@+id/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="65dp"
            android:textColor="@color/gray_6e"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:text="@string/welcome_subtitle"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            style="@style/NewDesign.Button.Blue"
            android:layout_marginTop="46dp"
            android:paddingVertical="18dp"
            android:text="@string/registrate"
            android:textFontWeight="500"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintHorizontal_bias="0.5"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login_app"
            android:textFontWeight="400"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_3d"
            android:textSize="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>