<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mikepenz.iconics.view.IconicsTextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/gmi_keyboard_backspace"
            android:textColor="@color/black_3d"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:text="@string/pokazazteli"
            android:textSize="20sp"
            android:textColor="@color/black_3d"
            android:textFontWeight="600"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/sf_pro_display_regular"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textFontWeight="400"
        android:textColor="@color/gray_C4"
        android:textSize="16sp"
        android:text="@string/number_of_account_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:layout_marginTop="59dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/sf_pro_display_regular"/>
    <TextView
        android:id="@+id/account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black_3d"
        android:text="000000000000"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_title"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textFontWeight="400"
        android:textColor="@color/gray_C4"
        android:textSize="16sp"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_number"
        android:layout_marginTop="20dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/sf_pro_display_regular"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Юзер Обычный"
        android:textColor="@color/black_3d"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_title"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/city_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textFontWeight="400"
        android:textColor="@color/gray_C4"
        android:textSize="16sp"
        android:text="@string/city_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/sf_pro_display_regular"/>
    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Алматы"
        android:textColor="@color/black_3d"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_title"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textFontWeight="400"
        android:textColor="@color/gray_C4"
        android:textSize="16sp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city"
        android:layout_marginTop="20dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/sf_pro_display_regular"/>
    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Абая 59"
        android:textColor="@color/black_3d"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_title"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/gas_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textFontWeight="500"
        android:textColor="@color/black_3d"
        android:textSize="16sp"
        android:text="@string/gas_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginTop="55dp"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/sf_pro_display_regular"/>
    <EditText
        android:id="@+id/gas_number_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_current_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gas_title"
        app:layout_constraintEnd_toStartOf="@id/scan"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="41dp"/>

    <ImageView
        android:id="@+id/scan"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/qr_scan"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue_new_4FF"
        app:layout_constraintTop_toBottomOf="@id/gas_title"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="41dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>