<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mikepenz.iconics.view.IconicsTextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/gmi_keyboard_backspace"
            android:textColor="@color/black_3d"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/helpContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_white_rounded_12"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.mikepenz.iconics.view.IconicsTextView
                android:id="@+id/helpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/gmi_headset_mic"
                android:textColor="@color/blue_new_0E3"
                android:textSize="18sp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="center_horizontal"
        android:text="@string/enter"
        android:textColor="@color/black_3d"
        android:textFontWeight="600"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="center_horizontal"
        android:text="@string/enter_login_pass"
        android:textColor="@color/gray_6e"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/number_of_phone_or_email"
        android:textColor="@color/gray_97"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTitle" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/gray_F2"
        android:hint="@string/number_of_phone_or_email"
        android:maxLength="12"
        android:textColorHint="@color/gray_97"
        android:textCursorDrawable="@color/gray_F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTitle"
        app:layout_goneMarginTop="56dp" />

    <TextView
        android:id="@+id/passTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/password"
        android:textColor="@color/gray_97"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/passInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/gray_F2"
        android:hint="@string/password"
        android:maxLength="12"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_97"
        android:textCursorDrawable="@color/gray_F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTitle"
        app:layout_goneMarginTop="56dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_pass"
        android:textSize="16sp"
        android:textColor="@color/gray_97"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textFontWeight="500"/>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        style="@style/NewDesign.Button.Blue"
        android:paddingVertical="18dp"
        android:text="@string/enter"
        android:layout_marginBottom="25dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>